--- a/main.html
+++ b/main.html
@@ -10,7 +10,9 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	<main id="job" class="accio">
+		<p class="hello-accio">Hello Accio Job</p>
+	</main>
 </body>
 
 </html>
